[tool.poetry]
name = "ddgai"
version = "0.1.0"
description = ""
authors = ["Dev Aggarwal <devxpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.2"
openai = "0.27.0"
python-decouple = "^3.6"
requests = "^2.28.1"
glom = "^22.1.0"
parse = "^1.19.0"
html2text = "^2020.1.16"
pandas = "^2.0.1"
google-cloud-firestore = "^2.7.0"
replicate = "^0.4.0"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
firebase-admin = "^6.0.0"
# mediapipe for M1 macs
mediapipe-silicon = {version = "^0.8.11", markers = "platform_machine == 'arm64'", platform = "darwin"}
# mediapipe for others
mediapipe = {version = "^0.8.11", markers = "platform_machine != 'arm64'"}
furl = "^2.1.3"
itsdangerous = "2.1.2"
pytest = "^7.2.0"
google-cloud-texttospeech = "2.12.1"
Wand = "^0.6.10"
readability-lxml = "^0.8.1"
transformers = "^4.24.0"
stripe = "^5.0.0"
python-multipart = "^0.0.5"
html-sanitizer = "^1.9.3"
plotly = "^5.11.0"
sentry-sdk = "^1.12.0"
httpx = "^0.23.1"
pyquery = "^1.4.3"
redis = "^4.5.1"
pytest-xdist = "^3.2.0"
requests-html = "^0.10.0"
pdftotext = "^2.2.2"
"pdfminer.six" = "^20221105"
google-api-python-client = "^2.80.0"
oauth2client = "^4.1.3"
tiktoken = "^0.3.2"
google-cloud-translate = ">=2.0.1,<2.1.0"
google-cloud-speech = "^2.19.0"
yt-dlp = "^2023.3.4"
llama-index = "^0.5.27"
nltk = "^3.8.1"
Jinja2 = "^3.1.2"
Django = "^4.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.2"}
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.4.0"
black = "^23.3.0"
django-extensions = "^3.2.1"
pytest-django = "^4.5.2"
celery = "^5.3.1"
qrcode = "^7.4.2"
opencv-contrib-python = "^4.7.0.72"
numpy = "^1.25.0"
pyzbar = "^0.1.9"
gspread = "^5.10.0"
hashids = "^1.3.1"

[tool.poetry.group.dev.dependencies]
watchdog = "^2.1.9"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
