[tool.poetry]
name = "ddgai"
version = "0.1.0"
description = ""
authors = ["Dev Aggarwal <devxpy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.15.2"
openai = "^1.68.2"
python-decouple = "^3.6"
requests = "^2.28.1"
glom = "^22.1.0"
parse = "^1.19.0"
pandas = "^2.0.1"
google-cloud-firestore = "^2.7.0"
replicate = "^0.15.4"
fastapi = "^0.85.0"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
firebase-admin = "^6.0.0"
mediapipe = "^0.10.15"
furl = "^2.1.3"
itsdangerous = "^2.1.2"
pytest = "^8.3.3"
google-cloud-texttospeech = "^2.12.1"
Wand = "^0.6.10"
readability-lxml = "^0.8.1"
transformers = "^4.24.0"
stripe = "^10.3.0"
python-multipart = "^0.0.6"
html-sanitizer = "^2.4.4"
plotly = "^5.11.0"
httpx = "^0.23.1"
pyquery = "^1.4.3"
redis = "^4.5.1"
pytest-xdist = "^3.2.0"
requests-html = "^0.10.0"
pdftotext = "^2.2.2"
"pdfminer.six" = "^20221105"
google-api-python-client = "^2.80.0"
oauth2client = "^4.1.3"
tiktoken = "^0.8"
google-cloud-translate = "^3.12.0"
google-cloud-speech = "^2.21.0"
yt-dlp = "^2024.12.23"
Jinja2 = "^3.1.2"
Django = "^5.1.3"
django-phonenumber-field = { extras = ["phonenumberslite"], version = "^7.0.2" }
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.4.0"
django-extensions = "^3.2.1"
pytest-django = "^4.9.0"
celery = "^5.3.1"
qrcode = "^7.4.2"
opencv-contrib-python = "^4.7.0.72"
numpy = "^1.25.0"
pyzbar = "^0.1.9"
gspread = "^5.10.0"
hashids = "^1.3.1"
langcodes = "^3.3.0"
language-data = "^1.1"
simplejson = "^3.19.1"
tabulate = "^0.9.0"
deepgram-sdk = "^2.11.0"
scipy = "^1.11.2"
rank-bm25 = "^0.2.2"
pytest-subtests = "^0.11.0"
anyio = "^3.4.0"
pyyaml = "^6.0.1"
ua-parser = "^0.18.0"
user-agents = "^2.2.0"
openpyxl = "^3.1.2"
loguru = "^0.7.2"
aifail = "^0.3.0"
pytest-playwright = "^0.4.3"
emoji = "^2.10.1"
pyvespa = "^0.51.0"
anthropic = "^0.34.1"
azure-cognitiveservices-speech = "^1.37.0"
twilio = "^9.2.3"
sentry-sdk = {version = "1.45.0", extras = ["loguru"]}
gooey-gui = "^0.5.3"
django-safedelete = "^1.4.0"
numexpr = "^2.10.1"
django-csp = "^3.8"
python-pptx = "^1.0.2"
azure-identity = "^1.19.0"
azure-keyvault-secrets = "^4.9.0"
xlrd = "^2.0.1"
websockets = "^15.0.1"
ruff = "^0.11.6"
black = "^24.2.0"

[tool.poetry.group.dev.dependencies]
watchdog = "^2.1.9"
ipython = "^8.5.0"
honcho = "^1.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  "migrations",
  "node_modules",
  ".git",
  ".venv",
  ".env",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  ".vscode",
  ".github",
  "__pycache__",
]

[tool.ruff.lint]
ignore = ["E402", "E741"]  # position of imports, single letter variables

[tool.ruff.lint.per-file-ignores]
"*/{tests,views,admin}.py" = ["F401"]
